Created initial files

--- a/musicvideo.html
+++ b/musicvideo.html
@@ -4,14 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Video</title>
+    <title>Musiclab</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" type="image/x-icon" href="img/hardmusiclab.png">
+
 </head>
+
+<body>
+    <header id="home">
+        <nav>
+        <img src="img/hardmusiclab.png" alt="Musiclab">
+        <p class="header-logo">Music Lab</p>
+            <ul class="menu">
+            <li><a href="/index.html"> Music </a></li>
+            <li><a href="/musicradio.html">Radio</a></li>
+            <li><a href="/musicvideo.html">Video</a></li>
+        </nav>
+    </header>
 <body>
     <main>
         <article>
              <iframe width="560" height="315" src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </article>
+        <article>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </article>
+        <article>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </article>
+        <article>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </article>
+        <article>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </article>
+        <article>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </article>
     </main>
+     <footer>
+    Music Lab,2018.
+    </footer>
     
 </body>
 </html>
