Created initial files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Musiclab</title>
+    <title>Music Lab</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" type="image/x-icon" href="img/hardmusiclab.png">
 </head>
@@ -20,66 +20,90 @@
         </nav>
     </header>
     <main>
+        <div class="music_container">
         <article  class="music-list">
                     <h4>Calvin Harris, Sam Smith - Promises</h4>
                         <img src="img/calvin-harris-sam-smithx.jpg" alt="calvin harris-promises">
                         <audio src="music/calvin-harris-sam-smith-promises.mp3" controls>  </audio>
         </article>
+        </div>
+        <div class="music_container">
         <article class="music-list">
             <h4>Twenty one Pilots - Stressed out</h4>
                 <img src="img/twentyonepilotestressedout.jpg" alt="twenty one pilots-stressed out">
                 <audio src="music/twenty-one-pilots-stressed-out.mp3" controls>  </audio>
         </article>
+        </div>
+        <div class="music_container">
         <article class="music-list">
-            <h4> Ed Sheran - Shape of you</h4>
+            <h4> Ed Sheeran - Shape of you</h4>
                 <img src="img/edsheranshapeofyou.jpg" alt="ed sheran-shape of you">
                 <audio src=" music/ed-sheeran-shape-of-you.mp3" controls>  </audio>
         </article>
+        </div>
+        <div class="music_container">
         <article class="music-list">
-            <h4>Ofenbach feat. Benjamin - Ingrosso</h4>
+            <h4>Ofenbach feat. Benjamin Ingrosso - Paradise</h4>
                 <img src="img/Ofenbach-feat-Benjamin-Ingrosso.jpg" alt="ofenbach-feat-benjamin-ingrosso">
                 <audio src="music/ofenbach-feat_-benjamin-ingrosso-paradise.mp3" controls>  </audio>   
         </article>
+        </div>
+        <div class="music_container">
         <article class="music-list">
             <h4>The Chainsmokers - Side Effects </h4>
                 <img src="img/sideeffects.jpg" alt="The Chainsmokers Side Effects" >
                 <audio src="music/thechainsmoker.mp3" controls>  </audio>   
         </article>
+        </div>
+        <div class="music_container">
         <article class="music-list">
             <h4>Tiësto & Dzeko ft. Preme & Post Malone-Jackie chan</h4>
                 <img src="img/tiestojackie.jpg" alt="tiestojackie">
                 <audio src="music/tiesto-dzeko-ja.mp3" controls>  </audio>
         </article>
+        </div>
+        <div class="music_container">
         <article class="music-list">
             <h4>Imagine Dragons - Thunder </h4>
                 <img src="img/imaginedragonsthunder.jpg" alt="imagine dragons thunder"/>
                 <audio src="music/imagine-dragons-thunder.mp3" controls>  </audio>
         </article>
+        </div>
+        <div class="music_container">
         <article class="music-list">
             <h4>Maroon 5 - Sugar </h4>
                 <img src="img/maroon5.jpg" alt="Maroon5Sugar"/>
                 <audio src="music/Maroon5Sugar.mp3" controls>  </audio>
         </article>
+        </div>
+        <div class="music_container">
         <article class="music-list">
             <h4>Imagine Dragons - Natural </h4>
                 <img src="img/imaginedragonsnatural.jpg" alt="imagine dragons natural">
                 <audio src="music/imaginedragonsnatural.mp3" controls>  </audio>
         </article>
+        </div>
+        <div class="music_container">
         <article  class="music-list">
                     <h4>Marshmello, Bastille - Happier</h4>
                         <img src="img/marshmello-bastille-happier.jpg" alt="marshmello-bastille-happier">
                         <audio src="music/Marshmello-Happ.mp3" controls>  </audio>
         </article>
+        </div>
+        <div class="music_container">
         <article  class="music-list">
                     <h4>Maruv - Drunk groove</h4>
                         <img src="img/maruv-drunk-groove.jpg" alt="maruv-drunk-groove">
                         <audio src="music/maruv-drunk-gro.mp3" controls>  </audio>
         </article>
+        </div>
+         <div class="music_container">
                 <article  class="music-list">
                     <h4>Rita Ora - Anywhere</h4>
                         <img src="img/rita-ora-anywere.jpg" alt="rita-ora-anywere">
                         <audio src="music/rita-ora-anywhere.mp3" controls>  </audio>
         </article>
+        </div>
                 <h2>Contact us</h2>
                     <form method="POST" action="https://formspree.io/iryna.kachmar777@gmail.com">
                         <label for="client-name">Ім’я та прізвище:
@@ -105,5 +129,6 @@
     <footer>
     Music Lab,2018.
     </footer>
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
