--- a/musicvideo.html
+++ b/musicvideo.html
@@ -13,7 +13,6 @@
 <body>
     <header id="home">
         <nav>
-        <img src="img/hardmusiclab.png" alt="Musiclab">
         <p class="header-logo">Music Lab</p>
             <ul class="menu">
             <li><a href="/index.html"> Music </a></li>
@@ -24,22 +23,40 @@
 <body>
     <main>
         <article>
-             <iframe width="560" height="315" src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/dTQMd2I3drE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </article>
         <article>
-             <iframe width="560" height="315" src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/pXRviuL6vMY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </article>
         <article>
-             <iframe width="560" height="315" src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/JGwWNGJdvx8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </article>
         <article>
-             <iframe width="560" height="315" src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/MTAMDZ0kii0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </article>
         <article>
-             <iframe width="560" height="315" src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/nuckTcoZG4Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </article>
         <article>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/6DaL-Z4dwzI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </article>
+            <article>
              <iframe width="560" height="315" src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </article>
+         <article>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/09R8_2nJtjg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </article>
+         <article>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/0I647GU3Jsc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </article>
+         <article>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/m7Bc3pLyij0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </article>
+         <article>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/CTwiB1uw9sQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </article>
+         <article>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/ksdAs4LBRq8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </article>
     </main>
      <footer>
