--- a/musicvideo.html
+++ b/musicvideo.html
@@ -5,23 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Musiclab</title>
-    <link rel="stylesheet" href="css/index.css">
     <link rel="icon" type="image/x-icon" href="img/hardmusiclab.png">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 
 </head>
 
 <body>
     <header id="home">
-        <nav>
-        <p class="header-logo">Music Lab</p>
-            <ul class="menu">
-            <li><a href="/index.html"> Music </a></li>
-            <li><a href="/musicradio.html">Radio</a></li>
-            <li><a href="/musicvideo.html">Video</a></li>
-        </nav>
+ <p class="header-logo">Music Lab</p>
+    <nav class="nav nav-pills nav-justified">
+  <a class="nav-item nav-link" href="index.html">Music</a>
+  <a class="nav-item nav-link" href="musicradio.html">Radio</a>
+  <a class="nav-item nav-link" href="musicvideo.html">Video</a>
+</nav>
     </header>
 <body>
     <main>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
         <article>
              <iframe width="560" height="315" src="https://www.youtube.com/embed/dTQMd2I3drE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </article>
@@ -59,9 +81,25 @@
              <iframe width="560" height="315" src="https://www.youtube.com/embed/ksdAs4LBRq8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </article>
     </main>
+    <hr>
+            <div class="container">
+    <nav aria-label="...">
+  <ul class="pagination pagination-sm">
+    <li class="page-item disabled">
+      <a class="page-link" href="index.html" tabindex="-1">1</a>
+    </li>
+    <li class="page-item"><a class="page-link" href="musicradio.html">2</a></li>
+    <li class="page-item"><a class="page-link" href="musicvideo.html">3</a></li>
+  </ul>
+</nav>
+</div>
      <footer>
     Music Lab,2018.
     </footer>
     
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
