--- a/musicradio.html
+++ b/musicradio.html
@@ -8,9 +8,7 @@
      <link rel="icon" type="image/x-icon" href="img/hardmusiclab.png">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-   
 </head>
-
 <body>
     <header id="home">
  <p class="header-logo">Music Lab</p>
@@ -21,7 +19,7 @@
 </nav>
     </header>
     <main>
-         <div >
+         <div>
              <h3>Hit FM</h3>
              <audio src="http://195.95.206.17/HitFM" controls>  </audio>
                     </div>
@@ -41,12 +39,11 @@
                     <h3>Lux FM</h3>
              <audio src="http://icecastdc.luxnet.ua/lux" controls>  </audio>
                     </div>
-                    
     </main>
     <hr>
             <div class="container">
     <nav aria-label="...">
-  <ul class="pagination pagination-sm">
+  <ul class="pagination justify-content-center">
     <li class="page-item disabled">
       <a class="page-link" href="index.html" tabindex="-1">1</a>
     </li>
@@ -55,7 +52,6 @@
   </ul>
 </nav>
 </div>
-
      <footer>
     Music Lab,2018.
     </footer>
