--- a/musicvideo.html
+++ b/musicvideo.html
@@ -22,17 +22,44 @@
 </nav>
     </header>
 <body>
-    <main>
+    <main class="container">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide">
+             <iframe width="700" height="375" src="https://www.youtube.com/embed/dTQMd2I3drE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
+             <iframe width="700" height="375" src="https://www.youtube.com/embed/pXRviuL6vMY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+             <iframe width="700" height="375" src="https://www.youtube.com/embed/JGwWNGJdvx8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+     <div class="carousel-item">
+             <iframe width="700" height="375" src="https://www.youtube.com/embed/MTAMDZ0kii0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+     <div class="carousel-item">
+             <iframe width="700" height="375" src="https://www.youtube.com/embed/nuckTcoZG4Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+     <div class="carousel-item">
+             <iframe width="700" height="375" src="https://www.youtube.com/embed/6DaL-Z4dwzI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+     <div class="carousel-item">
+             <iframe width="700" height="375" src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+     <div class="carousel-item">
+             <iframe width="700" height="375" src="https://www.youtube.com/embed/09R8_2nJtjg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+     <div class="carousel-item">
+             <iframe width="700" height="375" src="https://www.youtube.com/embed/0I647GU3Jsc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+     <div class="carousel-item">
+             <iframe width="750" height="375" src="https://www.youtube.com/embed/m7Bc3pLyij0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+     <div class="carousel-item">
+             <iframe width="700" height="375" src="https://www.youtube.com/embed/CTwiB1uw9sQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+    <div class="carousel-item">
+             <iframe width="700" height="375" src="https://www.youtube.com/embed/ksdAs4LBRq8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -84,7 +111,7 @@
     <hr>
             <div class="container">
     <nav aria-label="...">
-  <ul class="pagination pagination-sm">
+  <ul class="pagination justify-content-center">
     <li class="page-item disabled">
       <a class="page-link" href="index.html" tabindex="-1">1</a>
     </li>
