Created initial files

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   </head>
-<body>
+<body >
     <div class="container">
     <header id="home">
-        <p class="header-logo">Music Lab</p>
+        <p class="header-logo" >Music Lab</p>
         <nav class="nav nav-pills nav-justified">
           <a class="nav-item nav-link" href="index.html">Music</a>
           <a class="nav-item nav-link" href="musicradio.html">Radio</a>
@@ -22,91 +22,117 @@
     </header>
     </div>
 <main class="container">
-        <div class="music_container">
+    <div class="row">
+        <div class="col-sm-6">
+          <div class="music_container">
         <article  class="music-list">
-            <h4 class="animated infinite flash delay-2s">Calvin Harris, Sam Smith - Promises</h4>
+            <h4>Calvin Harris, Sam Smith - Promises</h4>
                 <img src="img/calvin-harris-sam-smithx.jpg" class="rounded mx-auto d-block" alt="calvin harris-promises">
                 <audio src="music/calvin-harris-sam-smith-promises.mp3" controls>  </audio>
         </article>
+        </div>   
         </div>
-        <div class="music_container">
+        <div class="col-sm-6">
+            <div class="music_container">
         <article class="music-list">
             <h4>Twenty one Pilots - Stressed out</h4>
-                <img src="img/twentyonepilotestressedout.jpg" class="rounded mx-auto d-block" alt="twenty one pilots-stressed out">
+                <img src="img/twentyonepilotsstressedout.jpg" class="rounded mx-auto d-block" alt="twenty one pilots-stressed out">
                 <audio src="music/twenty-one-pilots-stressed-out.mp3" controls>  </audio>
         </article>
         </div>
-        <div class="music_container">
-        <article class="music-list">
-            <h4 class="animated infinite flash delay-2s"> Ed Sheeran - Shape of you</h4>
-                <img src="img/edsheranshapeofyou.jpg" class="rounded mx-auto d-block" alt="ed sheran-shape of you">
-                <audio src=" music/ed-sheeran-shape-of-you.mp3" controls>  </audio>
-        </article>
         </div>
-        <div class="music_container">
+         <div class="col-sm-6">
+            <div class="music_container">
         <article class="music-list">
-            <h4>Ofenbach feat. Benjamin Ingrosso - Paradise</h4>
-                <img src="img/Ofenbach-feat-Benjamin-Ingrosso.jpg" class="rounded mx-auto d-block" alt="ofenbach-feat-benjamin-ingrosso">
-                <audio src="music/ofenbach-feat_-benjamin-ingrosso-paradise.mp3" controls>  </audio>   
-        </article>
-        </div>
-        <div class="music_container">
-        <article class="music-list">
-            <h4 class="animated infinite flash delay-2s">The Chainsmokers - Side Effects </h4>
-                <img src="img/sideeffects.jpg" class="rounded mx-auto d-block" alt="The Chainsmokers Side Effects" >
-                <audio src="music/thechainsmoker.mp3" controls>  </audio>   
-        </article>
-        </div>
-        <div class="music_container">
-        <article class="music-list">
-            <h4>Tiësto & Dzeko ft. Preme & Post Malone-Jackie chan</h4>
-                <img src="img/tiestojackie.jpg" class="rounded mx-auto d-block" alt="tiestojackie">
-                <audio src="music/tiesto-dzeko-ja.mp3" controls>  </audio>
-        </article>
-        </div>
-        <div class="music_container">
-        <article class="music-list">
-            <h4 class="animated infinite flash delay-2s">Imagine Dragons - Thunder </h4>
-                <img src="img/imaginedragonsthunder.jpg" class="rounded mx-auto d-block" alt="imagine dragons thunder"/>
-                <audio src="music/imagine-dragons-thunder.mp3" controls>  </audio>
-        </article>
-        </div>
-        <div class="music_container">
-        <article class="music-list">
-            <h4>Maroon 5 - Sugar </h4>
-                <img src="img/maroon5.jpg" class="rounded mx-auto d-block" alt="Maroon5Sugar"/>
-                <audio src="music/Maroon5Sugar.mp3" controls>  </audio>
-        </article>
-        </div>
-        <div class="music_container">
-        <article class="music-list">
-            <h4 class="animated infinite flash delay-2s">Imagine Dragons - Natural </h4>
-                <img src="img/imaginedragonsnatural.jpg" class="rounded mx-auto d-block" alt="imagine dragons natural">
-                <audio src="music/imaginedragonsnatural.mp3" controls>  </audio>
-        </article>
-        </div>
-        <div class="music_container">
-        <article  class="music-list">
             <h4>Marshmello, Bastille - Happier</h4>
                 <img src="img/marshmello-bastille-happier.jpg" class="rounded mx-auto d-block" alt="marshmello-bastille-happier">
                 <audio src="music/Marshmello-Happ.mp3" controls>  </audio>
         </article>
         </div>
-        <div class="music_container">
+         </div>  
+         <div class="col-sm-6">
+          <div class="music_container">
+        <article class="music-list">
+            <h4>Ofenbach feat. Benjamin Ingrosso - Paradise</h4>
+                <img src="img/Ofenbach-feat-Benjamin-Ingrosso.jpg" class="rounded mx-auto d-block" alt="ofenbach-feat-benjamin-ingrosso">
+                <audio src="music/ofenbach-feat_-benjamin-ingrosso-paradise.mp3" controls>  </audio>   
+        </article>
+        </div>   
+         </div> 
+         <div class="col-sm-6">
+           <div class="music_container">
+        <article class="music-list">
+            <h4>The Chainsmokers - Side Effects ft. Emily Warren </h4>
+                <img src="img/sideeffects.jpg" class="rounded mx-auto d-block" alt="The Chainsmokers Side Effects" >
+                <audio src="music/thechainsmoker.mp3" controls>  </audio>   
+        </article>
+        </div>  
+         </div> 
+         <div class="col-sm-6">
+             <div class="music_container">
+        <article class="music-list">
+            <h4>Tiësto & Dzeko ft. Preme & Post Malone-Jackie chan</h4>
+                <img src="img/tiestojackie.jpg" class="rounded mx-auto d-block" alt="tiestojackie">
+                <audio src="music/tiesto-dzeko-ja.mp3" controls>  </audio>
+        </article>
+        </div>  
+         </div> 
+         <div class="col-sm-6">
+            <div class="music_container">
+        <article class="music-list">
+            <h4 >Imagine Dragons - Thunder </h4>
+                <img src="img/imaginedragonsthunder.jpg" class="rounded mx-auto d-block" alt="imagine dragons thunder"/>
+                <audio src="music/imagine-dragons-thunder.mp3" controls>  </audio>
+        </article>
+        </div> 
+         </div> 
+         <div class="col-sm-6">
+            <div class="music_container">
+        <article class="music-list">
+            <h4>Maroon 5 - Sugar </h4>
+                <img src="img/maroon5.jpg" class="rounded mx-auto d-block" alt="Maroon5Sugar"/>
+                <audio src="music/Maroon5Sugar.mp3" controls>  </audio>
+        </article>
+        </div> 
+         </div> 
+            <div class="col-sm-6">
+            <div class="music_container">
+        <article class="music-list">
+            <h4>Imagine Dragons - Natural </h4>
+                <img src="img/imaginedragonsnatural.jpg" class="rounded mx-auto d-block" alt="imagine dragons natural">
+                <audio src="music/imaginedragonsnatural.mp3" controls>  </audio>
+        </article>
+        </div>    
+            </div>
+            <div class="col-sm-6">
+              <div class="music_container">
         <article  class="music-list">
-            <h4 class="animated infinite flash delay-2s">Maruv - Drunk groove</h4>
+            <h4>Ed Sheeran - Shape of you</h4>
+                <img src="img/edsheranshapeofyou.jpg" class="rounded mx-auto d-block" alt="ed sheran-shape of you">
+                <audio src="music/ed-sheeran-shape-of-you.mp3" controls>  </audio>
+        </article>
+        </div>  
+            </div>
+            <div class="col-sm-6">
+            <div class="music_container">
+        <article  class="music-list">
+            <h4>Maruv - Drunk groove</h4>
                 <img src="img/maruv-drunk-groove.jpg" class="rounded mx-auto d-block" alt="maruv-drunk-groove">
                 <audio src="music/maruv-drunk-gro.mp3" controls>  </audio>
         </article>
-        </div>
-        <div class="music_container" >
+        </div>    
+            </div>
+            <div class="col-sm-6">
+            <div class="music_container" >
         <article  class="music-list">
             <h4>Rita Ora - Anywhere</h4>
-                <img src="img/rita-ora-anywere.jpg" class="rounded mx-auto d-block" alt="rita-ora-anywere">
+                <img src="img/rita-ora-anywhere.jpg" class="rounded mx-auto d-block" alt="rita-ora-anywere">
                 <audio src="music/rita-ora-anywhere.mp3" controls>  </audio>
         </article>
-        </div>
-         <h2 class="animated infinite flash delay-2s">Contact us</h2>
+        </div>    
+            </div>
+    </div>
+             <h2 class="animated infinite flash delay-2s">Contact us</h2>
         <form method="POST" action="https://formspree.io/iryna.kachmar777@gmail.com">
       <div class="form-group">
         <label for="exampleFormControlInput1">Email</label>
@@ -145,7 +171,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin = "anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin = "anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin = "anonymous"></script>
-    <script src="js/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
