Created initial files

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <div class="col-sm-6">
           <div class="music_container">
         <article  class="music-list">
-            <h4>Calvin Harris, Sam Smith - Promises</h4>
-                <img src="img/calvin-harris-sam-smithx.jpg" class="rounded mx-auto d-block" alt="calvin harris-promises">
-                <audio src="music/calvin-harris-sam-smith-promises.mp3" controls>  </audio>
+            <h4>Marshmello feat. Bastille - Happier</h4>
+                <img src="img/marshmello-bastille-happier.jpg" class="rounded mx-auto d-block" alt="marshmello-bastille-happier">
+                <audio src="music/Marshmello-Happ.mp3" controls>  </audio>
         </article>
         </div>   
         </div>
@@ -36,7 +36,7 @@
             <div class="music_container">
         <article class="music-list">
             <h4>Twenty one Pilots - Stressed out</h4>
-                <img src="img/twentyonepilotsstressedout.jpg" class="rounded mx-auto d-block" alt="twenty one pilots-stressed out">
+                <img src="img/twenty-one-pilotes.jpg" class="rounded mx-auto d-block" alt="twenty one pilots-stressed out">
                 <audio src="music/twenty-one-pilots-stressed-out.mp3" controls>  </audio>
         </article>
         </div>
@@ -44,9 +44,9 @@
          <div class="col-sm-6">
             <div class="music_container">
         <article class="music-list">
-            <h4>Marshmello, Bastille - Happier</h4>
-                <img src="img/marshmello-bastille-happier.jpg" class="rounded mx-auto d-block" alt="marshmello-bastille-happier">
-                <audio src="music/Marshmello-Happ.mp3" controls>  </audio>
+            <h4>Calvin Harris feat. Sam Smith - Promises</h4>
+                <img src="img/promises.jpg" class="rounded mx-auto d-block" alt="calvin harris-promises">
+                <audio src="music/calvin-harris-sam-smith-promises.mp3" controls>  </audio>
         </article>
         </div>
          </div>  
